--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,3 +47,19 @@
     border: 1px solid #e0e0e0cb !important;
     border-radius: 5px !important;
 }
+
+thead tr {
+    background-color: #d0d0d0;
+}
+
+tr {
+    height: 40px;
+    border: 2px solid rgba(0, 0, 0, 0.200);
+}
+
+td {
+    text-align: center;
+    border: 2px solid rgba(0, 0, 0, 0.200);
+    padding: 10px 0;
+    min-width: 280px;
+}
